# dxtexwrapper

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE
lib/: DirectXTex-x64.lib  DirectXTex-x86.lib  README.md
src/: CMakeLists.txt  Content.h  Data.h  DxTexWrapper.cpp  DxTexWrapper.h  ImageData.h  main.cpp
